--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Fresh Chrome Extension",
-  "description": "Fully functional, useful bare minimum Google Chrome extension boilerplate.",
+  "description": "Fully functional, useful bare minimum Google Chrome extension boilerplate [Manifest V3].",
   "homepage_url": "https://github.com/llagerlof/fresh-chrome-extension",
-  "version": "1.0.0",
-  "manifest_version": 2,
-  "browser_action": {
+  "version": "2.0.0",
+  "manifest_version": 3,
+  "action": {
     "default_title": "execute.js will run (watch the Chrome DevTools' console)"
   },
   "content_scripts": [
@@ -26,12 +26,13 @@
     }
   ],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "background.js"
   },
   "permissions": [
     "tabs",
+    "scripting"
+  ],
+  "host_permissions": [
     "https://*/*",
     "http://*/*"
   ]
