--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,23 @@
   "name": "Fresh Chrome Extension",
   "description": "Fully functional, useful bare minimum Google Chrome extension boilerplate [Manifest V3].",
   "homepage_url": "https://github.com/llagerlof/fresh-chrome-extension",
-  "version": "2.0.0",
+  "version": "3.0.2",
   "manifest_version": 3,
   "action": {
-    "default_title": "execute.js will run (watch the Chrome DevTools' console)"
+    "default_title": "Fresh Chrome Extension",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icon16.png",
+      "32": "icon32.png",
+      "64": "icon64.png",
+      "128": "icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "64": "icon64.png",
+    "128": "icon128.png"
   },
   "content_scripts": [
     {
@@ -25,9 +38,6 @@
       ]
     }
   ],
-  "background": {
-    "service_worker": "background.js"
-  },
   "permissions": [
     "tabs",
     "scripting"
